--- a/rang/templates/home.html
+++ b/rang/templates/home.html
@@ -120,14 +120,18 @@
             color: rgb(46, 40, 40);
             border-radius: 2px;
             background-color: rgb(204, 202, 226);
-            box-shadow: 2px 2px 7px rgb(120, 219, 128);
+            box-shadow: 2px 2px 7px rgb(37, 107, 43);
             margin: 14px;
         }
 
+        #abd:hover{
+            background-color: rgb(253, 222, 46);
+        }
         #abd {
             padding: 2px;
             border-radius: 3px;
             color: #000;
+            text-decoration: none;
             font-size: 23px;
             background-color: rgb(228, 235, 221);
             box-shadow: 1px 1px 2px rgb(152, 183, 184);
@@ -221,6 +225,7 @@
         </div>
     </nav>
 
+        
     <hr>
 
     <p id="pp"><span id="m">معاد ژرف</span> بهترین خدمات نقاشی درب، پنجره و بتونه کاری دیوار و غیره پذیرفته میشود با
@@ -297,7 +302,7 @@
             <p id="c" style="color: rgb(255, 255, 255);">با مدیریت : </p>
             <p id="cal">معاد ژرف</p>
         </div>
-        <p class="ab">برنامه نویس و طراح سایت : <span id="abd">عبدالله چلاسی</span></p>
+        <p class="ab">برنامه نویس و طراح سایت : <a id="abd" target="#" href="http://www.abdollahchelasi.ir/">عبدالله چلاسی</a></p>
 
     </footer>
 
